--- a/index.html
+++ b/index.html
@@ -5,8 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>rise</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/mxt0jbh.css">
 </head>
 <body>
-<script type="text/javascript" src="js/app.js"></script>    
+    <div class="grid-parent">
+        <header class="header">
+            <nav class="nav-top">
+                <a class="logo-link" href="#">
+                    <img class="logo"src="img/logo.png"/> 
+                </a>
+                <div class="social-media">
+                    <a href="#"> 
+                        <img class="ig-icon"/>
+                    </a>
+                    <a href="#">
+                        <img class="fb-icon" />
+                    </a>
+                </div>
+                <div class="select-lang">
+                    <a href="#">pl</a>
+                    <a href="#">en</a>
+                 </div>
+            </nav>
+            <div class="menu-wrapper">
+                <div class="hamburger-menu"></div>
+            </div>
+            <section class="header-content">
+                <h2 class="sub-title">get this special feeling</h2>
+                <h1 class="title">unpack your event</h1>
+                <a  class="work-link" href="#">zacznij współpracę</a>
+                <div class="box">
+                    <img src="img/box.png" />
+                </div>
+                <div class="box-shadow">
+                    <img  src="img/box-shadow.png" />
+                </div>
+            </section>   
+        </header>
+        <article class="about-us">
+            <div class="logos">
+                <img class="logo2" src="img/logo.png"/>
+                <img class="logo-sansara" src="img/logo-sansara.png" />
+                <sub>01</sub>
+            </div>
+            <div class="description">
+                <p>Ride by Sansara to agencja eventowa, która zajmuje się
+                kompleksową organizacją eventów na każdym etapie współpracy.
+                Nasz zespół składa się z doświadczonych specjalistów z dziedziny
+                logistyki, cateringu, oświetlenia, dźwięku, marketingu oraz kreacji.
+                Wieloletnie doświadczeniei pasja sprawiają, że stworzymy
+                dla Ciebie każdy rodzaj eventu.</p>
+                <p>Sansara Group to agencja eventowa, która zajmuje się
+                kompleksową organizacją eventów na każdym etapie współpracy.
+                Poznaj właścicileki agencji:</p>
+            </div>
+        </article>
+
+    </div>
+<script type="text/javascript" src="app/app.js"></script>    
 </body>
 </html>
