--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                 <img class="logo2" src="img/logo2.png" />
                 <sub class="sub">01</sub>
                 <img class="logo-sansara" src="img/logo-sansara.png" />
+                <div class="small-ball one"></div>
+                <div class="small-ball two"></div>
+                <div class="bigger-ball"></div>
             </div>
             <div class="description">
                 <p>Ride by Sansara to agencja eventowa, która zajmuje się
@@ -55,7 +58,6 @@
                     logistyki, cateringu, oświetlenia, dźwięku, marketingu oraz kreacji.
                     Wieloletnie doświadczeniei pasja sprawiają, że stworzymy
                     dla Ciebie każdy rodzaj eventu.</p>
-                
                 <p>Sansara Group to agencja eventowa, która zajmuje się
                     kompleksową organizacją eventów na każdym etapie współpracy.
                     Poznaj właścicileki agencji:</p>
