add images and markup for slider

--- a/index.html
+++ b/index.html
@@ -40,6 +40,25 @@
                 <div class="box-shadow">
                     <img  src="img/box-shadow.png" />
                 </div>
+                <div class="scroll">
+                    <p>scroll to unpack</p>
+                    <div class="vertical-line"></div>
+                </div>
+                <img class="cloud" src="img/header-cloud.png" />
+                <img class="ball-on-cloud" src="img/ball-bottom.png" />
+                <img class="ball-on-box" src="img/ball-on-box.png" />
+                <img class="ball-on-bean" src="img/ball-on-bean.png" />
+                <img class="bubble-on-top" src="img/bubble-ball-top-box.png" />
+                <img class="bubble-above-top" src="img/bubble-above-top.png" />
+                <img class="bubble-right-top-corner" src="img/bubble-right-corner.png" />
+                <img class="ball-on-left-from-text" src="img/ball-left-text.png" />
+                <img class="blur-ball" src="img/blur-ball-on-text.png"/>
+                <img class="bubble-behide-text" src="img/bubble-behind-text.png"/>
+                <img class="ball-above-text" src="img/ball-above-text.png"/>
+                <img class="big-bubble" src="img/big-bubble-top.png" />
+                <img class="small-bubble" src="img/small-bubble-top.png" />
+                <img class="first-bubble" src="img/first-bubble.png"/>
+                <img class="ball-top" src="img/ball-top.png" />
             </section>   
         </header>
         <article class="about-us">
@@ -72,8 +91,25 @@
                     <button>check</button>
                 </div>
             </div>
-            
-            
+            <div class="carusel">
+                <div class="carusel-text">
+                    <p class="display">Wierzymy, że kreatywność i postęp nie mają granic, a wychodzenie pozaramy otwiera wiele możliwości, dlatego tworzymy
+                    eventy, w którychpodstawą jest dostarczanie niezapomnianych emocji. W naszychprodukcjach dążymy do kreowania
+                    zaskakującej i porywającej przestrzeni,
+                    w której uczestnicy eventu mogą poczuć się wyjątkowo i niepowatrzalnie.Multidyscyplinarny zespół, odwaga i nastawienie
+                    na sukces to fundamentynaszych działań.</p>
+                    <p>
+                        <!-- next sllide -->
+                    </p>
+                </div>
+                <ul class="carusel-title">
+                    <li class="display">01 misja</li>
+                    <li>02 wizja</li>
+                </ul>
+                <button class="next-slide"></button>
+                <div class="slider-ball"></div>
+            </div>
+            <img class="slider-cloud" src="img/cloud-slider.png" />
         </article>
 
     </div>
