create unpack section

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                     <img src="img/box.png" />
                 </div>
                 <div class="box-shadow">
-                    <img  src="img/box-shadow.png" />
-                </div>
+                    <img src="img/box-shadow.png" />
+                </div>  
                 <div class="scroll">
                     <p>scroll to unpack</p>
                     <div class="vertical-line"></div>
@@ -62,15 +62,15 @@
             </section>   
         </header>
         <article class="about-us">
-            <div class="logos">
+            <section class="logos">
                 <img class="logo2" src="img/logo2.png" />
                 <sub class="sub">01</sub>
                 <img class="logo-sansara" src="img/logo-sansara.png" />
                 <div class="small-ball one"></div>
                 <div class="small-ball two"></div>
                 <div class="bigger-ball"></div>
-            </div>
-            <div class="description">
+            </section>
+            <section class="description">
                 <p>Ride by Sansara to agencja eventowa, która zajmuje się
                     kompleksową organizacją eventów na każdym etapie współpracy.
                     Nasz zespół składa się z doświadczonych specjalistów z dziedziny
@@ -90,7 +90,7 @@
                     <div class="name">Katarzyna Hącia:</div>
                     <button>check</button>
                 </div>
-            </div>
+            </section>
             <div class="carusel">
                 <div class="carusel-text">
                     <p class="display">Wierzymy, że kreatywność i postęp nie mają granic, a wychodzenie pozaramy otwiera wiele możliwości, dlatego tworzymy
@@ -110,6 +110,62 @@
                 <div class="slider-ball"></div>
             </div>
             <img class="slider-cloud" src="img/cloud-slider.png" />
+        </article>
+        <article class="unpack">
+            <h2 class="">time to unpack</h2>
+            <p>Decydując się na współpracę z nami, w pakiecie otrzymasz niezwykłe przeżycia,
+            które będą Ci towarzyszyć na każdym etapie organizacji eventu:</p>
+            <figure>
+                <img class="pillow" src="img/pillow.png"/>
+                <figcaption>komfort pracy</figcaption>
+                <div class="horizontal-line"></div>
+                <p>Możesz spać spokojnie. W tym czasie
+                my zajmiemy się każdym szczegółem
+                organizacji, abyś Ty mógł zająć się
+                swoimi sprawami.</p>
+            </figure>
+            <figure>
+                <img class="lifejacket" src="img/lifejacket.png"/>
+                <figcaption>bezpieczeństwo</figcaption>
+                <div class="horizontal-line"></div>
+                <p>Możesz zaufać naszemu doświadczeniu.
+                Zapobiegamy wszelkiemu ryzyku, które
+                może pojawić się podczas organizacji
+                Twojego eventu.</p>
+            </figure>
+            <figure>
+                <img class="bulb" src="img/light-bulb.png"/>
+                <figcaption>uznanie</figcaption>
+                <div class="horizontal-line"></div>
+                <p>Zawsze bierzemy pod uwagę Twoje
+                pomysły, które mogą uczynić event
+                jeszcze lepszym.</p>
+            </figure>
+            <figure>
+                <img class="binoculars" src="img/binoculars.png"/>
+                <figcaption>odliczanie</figcaption>
+                <div class="horizontal-line"></div>
+                <p>Wyczekujesz już swojego eventu?
+                My też! Możesz być pewien, że
+                będzie jedyny w swoim rodzaju.</p>
+            </figure> 
+            <figure>   
+                <img class="roller-skates" src="img/roller-skates.png"/>
+                <figcaption>entuzjazm</figcaption>
+                <div class="horizontal-line"></div>
+                <p>Dzisiaj Twój event! Poczuj nieograniczoną
+                radość i ciesz się ze swojego wydarzenia,
+                a my będziemy czuwać nad jego
+                przebiegiem.</p>
+            </figure>
+            <figure>
+                <img class="trophy" src="img/trophy.png"/>
+                <figcaption>sukces</figcaption>
+                <div class="horizontal-line"></div>
+                <p>Event przebiegł według planu,
+                a Ty możesz odetchnąć z satysfakcją,
+                bo wszystko się udało.</p>
+            </figure>
         </article>
 
     </div>
