change hamburger position to fixed

--- a/index.html
+++ b/index.html
@@ -112,56 +112,50 @@
             <img class="slider-cloud" src="img/cloud-slider.png" />
         </article>
         <article class="unpack">
-            <h2 class="">time to unpack</h2>
-            <p>Decydując się na współpracę z nami, w pakiecie otrzymasz niezwykłe przeżycia,
+            <h2 class="unpack-title">time to unpack</h2>
+            <p class="descr">Decydując się na współpracę z nami, w pakiecie otrzymasz niezwykłe przeżycia,
             które będą Ci towarzyszyć na każdym etapie organizacji eventu:</p>
-            <figure>
+            <figure class="block comfort">
                 <img class="pillow" src="img/pillow.png"/>
-                <figcaption>komfort pracy</figcaption>
-                <div class="horizontal-line"></div>
+                <figcaption class="block-title">komfort pracy</figcaption>
                 <p>Możesz spać spokojnie. W tym czasie
                 my zajmiemy się każdym szczegółem
                 organizacji, abyś Ty mógł zająć się
                 swoimi sprawami.</p>
             </figure>
-            <figure>
+            <figure class="block safe">
                 <img class="lifejacket" src="img/lifejacket.png"/>
-                <figcaption>bezpieczeństwo</figcaption>
-                <div class="horizontal-line"></div>
+                <figcaption class="block-title">bezpieczeństwo</figcaption>
                 <p>Możesz zaufać naszemu doświadczeniu.
                 Zapobiegamy wszelkiemu ryzyku, które
                 może pojawić się podczas organizacji
                 Twojego eventu.</p>
             </figure>
-            <figure>
+            <figure class="block appreciation">
                 <img class="bulb" src="img/light-bulb.png"/>
-                <figcaption>uznanie</figcaption>
-                <div class="horizontal-line"></div>
+                <figcaption class="block-title">uznanie</figcaption>
                 <p>Zawsze bierzemy pod uwagę Twoje
                 pomysły, które mogą uczynić event
                 jeszcze lepszym.</p>
             </figure>
-            <figure>
+            <figure class="block counting">
                 <img class="binoculars" src="img/binoculars.png"/>
-                <figcaption>odliczanie</figcaption>
-                <div class="horizontal-line"></div>
+                <figcaption class="block-title">odliczanie</figcaption>
                 <p>Wyczekujesz już swojego eventu?
                 My też! Możesz być pewien, że
                 będzie jedyny w swoim rodzaju.</p>
             </figure> 
-            <figure>   
+            <figure class="block enthusiasm">   
                 <img class="roller-skates" src="img/roller-skates.png"/>
-                <figcaption>entuzjazm</figcaption>
-                <div class="horizontal-line"></div>
+                <figcaption class="block-title">entuzjazm</figcaption>
                 <p>Dzisiaj Twój event! Poczuj nieograniczoną
                 radość i ciesz się ze swojego wydarzenia,
                 a my będziemy czuwać nad jego
                 przebiegiem.</p>
             </figure>
-            <figure>
+            <figure class="block success">
                 <img class="trophy" src="img/trophy.png"/>
-                <figcaption>sukces</figcaption>
-                <div class="horizontal-line"></div>
+                <figcaption class="block-title">sukces</figcaption>
                 <p>Event przebiegł według planu,
                 a Ty możesz odetchnąć z satysfakcją,
                 bo wszystko się udało.</p>
