fix images position on mobile view

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <img class="ball-top" src="img/ball-top.png" />
             </section>   
         </header>
-        <article class="about-us">
+        <article class="about">
             <section class="logos">
                 <img class="logo2" src="img/logo2.png" />
                 <sub class="sub">01</sub>
@@ -99,7 +99,7 @@
                     w której uczestnicy eventu mogą poczuć się wyjątkowo i niepowatrzalnie.Multidyscyplinarny zespół, odwaga i nastawienie
                     na sukces to fundamentynaszych działań.</p>
                     <p>
-                        <!-- next sllide -->
+                        next sllide 
                     </p>
                 </div>
                 <ul class="carusel-title">
@@ -111,58 +111,61 @@
             </div>
             <img class="slider-cloud" src="img/cloud-slider.png" />
         </article>
-        <article class="unpack">
-            <h2 class="unpack-title">time to unpack</h2>
-            <p class="descr">Decydując się na współpracę z nami, w pakiecie otrzymasz niezwykłe przeżycia,
-            które będą Ci towarzyszyć na każdym etapie organizacji eventu:</p>
-            <figure class="block comfort">
-                <img class="pillow" src="img/pillow.png"/>
-                <figcaption class="block-title">komfort pracy</figcaption>
-                <p>Możesz spać spokojnie. W tym czasie
-                my zajmiemy się każdym szczegółem
-                organizacji, abyś Ty mógł zająć się
-                swoimi sprawami.</p>
-            </figure>
-            <figure class="block safe">
-                <img class="lifejacket" src="img/lifejacket.png"/>
-                <figcaption class="block-title">bezpieczeństwo</figcaption>
-                <p>Możesz zaufać naszemu doświadczeniu.
-                Zapobiegamy wszelkiemu ryzyku, które
-                może pojawić się podczas organizacji
-                Twojego eventu.</p>
-            </figure>
-            <figure class="block appreciation">
-                <img class="bulb" src="img/light-bulb.png"/>
-                <figcaption class="block-title">uznanie</figcaption>
-                <p>Zawsze bierzemy pod uwagę Twoje
-                pomysły, które mogą uczynić event
-                jeszcze lepszym.</p>
-            </figure>
-            <figure class="block counting">
-                <img class="binoculars" src="img/binoculars.png"/>
-                <figcaption class="block-title">odliczanie</figcaption>
-                <p>Wyczekujesz już swojego eventu?
-                My też! Możesz być pewien, że
-                będzie jedyny w swoim rodzaju.</p>
-            </figure> 
-            <figure class="block enthusiasm">   
-                <img class="roller-skates" src="img/roller-skates.png"/>
-                <figcaption class="block-title">entuzjazm</figcaption>
-                <p>Dzisiaj Twój event! Poczuj nieograniczoną
-                radość i ciesz się ze swojego wydarzenia,
-                a my będziemy czuwać nad jego
-                przebiegiem.</p>
-            </figure>
-            <figure class="block success">
-                <img class="trophy" src="img/trophy.png"/>
-                <figcaption class="block-title">sukces</figcaption>
-                <p>Event przebiegł według planu,
-                a Ty możesz odetchnąć z satysfakcją,
-                bo wszystko się udało.</p>
-            </figure>
-        </article>
-
+        <div class="gradient-background"> 
+            <article class="unpack">
+                <h2 class="unpack-title">time to unpack</h2>
+                <p class="descr">Decydując się na współpracę z nami, w pakiecie otrzymasz niezwykłe przeżycia,
+                które będą Ci towarzyszyć na każdym etapie organizacji eventu:</p>
+                <figure class="block comfort">
+                    <img class="pillow" src="img/pillow.png"/>
+                    <figcaption class="block-title">komfort pracy</figcaption>
+                    <p>Możesz spać spokojnie. W tym czasie
+                    my zajmiemy się każdym szczegółem
+                    organizacji, abyś Ty mógł zająć się
+                    swoimi sprawami.</p>
+                </figure>
+                <figure class="block safe">
+                    <img class="lifejacket" src="img/lifejacket.png"/>
+                    <figcaption class="block-title">bezpieczeństwo</figcaption>
+                    <p>Możesz zaufać naszemu doświadczeniu.
+                    Zapobiegamy wszelkiemu ryzyku, które
+                    może pojawić się podczas organizacji
+                    Twojego eventu.</p>
+                </figure>
+                <figure class="block appreciation">
+                    <img class="bulb" src="img/light-bulb.png"/>
+                    <figcaption class="block-title">uznanie</figcaption>
+                    <p>Zawsze bierzemy pod uwagę Twoje
+                    pomysły, które mogą uczynić event
+                    jeszcze lepszym.</p>
+                </figure>
+                <figure class="block counting">
+                    <img class="binoculars" src="img/binoculars.png"/>
+                    <figcaption class="block-title">odliczanie</figcaption>
+                    <p>Wyczekujesz już swojego eventu?
+                    My też! Możesz być pewien, że
+                    będzie jedyny w swoim rodzaju.</p>
+                </figure> 
+                <figure class="block enthusiasm">   
+                    <img class="roller-skates" src="img/roller-skates.png"/>
+                    <figcaption class="block-title">entuzjazm</figcaption>
+                    <p>Dzisiaj Twój event! Poczuj nieograniczoną
+                    radość i ciesz się ze swojego wydarzenia,
+                    a my będziemy czuwać nad jego
+                    przebiegiem.</p>
+                </figure>
+                <figure class="block success">
+                    <img class="trophy" src="img/trophy.png"/>
+                    <figcaption class="block-title">sukces</figcaption>
+                    <p>Event przebiegł według planu,
+                    a Ty możesz odetchnąć z satysfakcją,
+                    bo wszystko się udało.</p>
+                </figure>
+            </article>
+        </div> 
+        
     </div>
+    
 <script type="text/javascript" src="app/app.js"></script>    
 </body>
 </html>
