--- a/index.html
+++ b/index.html
@@ -44,27 +44,29 @@
                     <p>scroll to unpack</p>
                     <div class="vertical-line"></div>
                 </div>
-                <img class="cloud" src="img/header-cloud.png" />
-                <img class="ball-on-cloud" src="img/ball-bottom.png" />
-                <img class="ball-on-box" src="img/ball-on-box.png" />
-                <img class="ball-on-bean" src="img/ball-on-bean.png" />
-                <img class="bubble-on-top" src="img/bubble-ball-top-box.png" />
-                <img class="bubble-above-top" src="img/bubble-above-top.png" />
-                <img class="bubble-right-top-corner" src="img/bubble-right-corner.png" />
-                <img class="ball-on-left-from-text" src="img/ball-left-text.png" />
-                <img class="blur-ball" src="img/blur-ball-on-text.png"/>
-                <img class="bubble-behide-text" src="img/bubble-behind-text.png"/>
-                <img class="ball-above-text" src="img/ball-above-text.png"/>
-                <img class="big-bubble" src="img/big-bubble-top.png" />
-                <img class="small-bubble" src="img/small-bubble-top.png" />
-                <img class="first-bubble" src="img/first-bubble.png"/>
-                <img class="ball-top" src="img/ball-top.png" />
+                <div class="decor">
+                    <img class="cloud" src="img/ball.png" />
+                    <img class="ball-on-cloud" src="img/ball.png" />
+                    <img class="ball-on-box" src="img/metal-ball.png" />
+                    <img class="ball-on-bean" src="img/metal-ball.png" />
+                    <img class="bubble-on-top" src="img/bubble.png" />
+                    <img class="bubble-above-top" src="img/ball.png" />
+                    <img class="bubble-right-top-corner" src="img/ball.png" />
+                    <img class="ball-on-left-from-text" src="img/metal-ball.png" />
+                    <img class="blur-ball" src="img/metal-ball.png"/>
+                    <img class="bubble-behide-text" src="img/bubble.png"/>
+                    <img class="ball-above-text" src="img/metal-ball.png"/>
+                    <img class="big-bubble" src="img/bubble.png" />
+                    <img class="small-bubble" src="img/ball.png" />
+                    <img class="first-bubble" src="img/ball.png"/>
+                    <img class="ball-top" src="img/metal-ball.png" /> 
+                </div>
             </section>   
         </header>
         <article class="about">
             <section class="logos">
-                <img class="logo2" src="img/logo2.png" />
-                <sub class="sub">01</sub>
+                <img class="logo2" src="img/logo.png" />
+                <sup class="sub">01</sup>
                 <img class="logo-sansara" src="img/logo-sansara.png" />
                 <div class="small-ball one"></div>
                 <div class="small-ball two"></div>
@@ -109,11 +111,11 @@
                 <button class="next-slide"></button>
                 <div class="slider-ball"></div>
             </div>
-            <img class="slider-cloud" src="img/cloud-slider.png" />
+            <img class="slider-cloud" src="img/bubble.png" />
         </article>
         <div class="gradient-background"> 
             <article class="unpack">
-                <h2 class="unpack-title">time to unpack</h2>
+                <h2 class="unpack-title">time to unpack<sup>02</sup></h2>
                 <p class="descr">Decydując się na współpracę z nami, w pakiecie otrzymasz niezwykłe przeżycia,
                 które będą Ci towarzyszyć na każdym etapie organizacji eventu:</p>
                 <figure class="block comfort">
@@ -161,6 +163,9 @@
                     a Ty możesz odetchnąć z satysfakcją,
                     bo wszystko się udało.</p>
                 </figure>
+                <div class="bubbles-and-balls">
+
+                </div>
             </article>
         </div> 
         
