add styled images to unpack section

--- a/index.html
+++ b/index.html
@@ -164,7 +164,23 @@
                     bo wszystko się udało.</p>
                 </figure>
                 <div class="bubbles-and-balls">
-
+                    <img class="one" src="img/metal-ball.png">
+                    <img class="two" src="img/ball-of-wibbly-wobbly-timey-wimey-stuff.png"/>
+                    <img class="three" src="img/bubble.png"/>
+                    <img class="four" src="img/ball-of-wibbly-wobbly-timey-wimey-stuff.png" />
+                    <img class="five" src="img/ball.png" />
+                    <img class="six" src="img/ball.png" />
+                    <img class="seven" src="img/01.png" />
+                    <img class="eight" src="img/metal-ball.png">
+                    <img class="nine" src="img/bubble.png" />
+                    <img class="ten" src="img/bubble.png" />
+                    <img class="eleven" src="img/metal-ball.png">
+                    <img class="twelve" src="img/metal-ball.png">
+                    <img class="thirteen" src="img/metal-ball.png">
+                    <img class="fourteen" src="img/metal-ball.png">
+                    <img class="fifteen" src="img/metal-ball.png">
+                    <img class="sixteen" src="img/ball-of-wibbly-wobbly-timey-wimey-stuff.png" />
+                    <img class="seventeen" src="img/ball-of-wibbly-wobbly-timey-wimey-stuff.png" />
                 </div>
             </article>
         </div> 
