--- a/index.html
+++ b/index.html
@@ -183,6 +183,13 @@
                     <img class="seventeen" src="img/ball-of-wibbly-wobbly-timey-wimey-stuff.png" />
                 </div>
             </article>
+            <article class="projects-offer">
+
+            </article>
+            <article class="contact">
+
+            </article>
+            <footer class="footer"></footer>
         </div> 
         
     </div>
